# AI-LAN-Service-Discovery

./: .gitignore  .mtm  LICENSE  README.en.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
.trae/skills/aidis-service-discovery/: SKILL.md
.trae/skills/aiecho-service-discovery/: SKILL.md
docs/: .aiecho  .echo  .echo.schema.json  AI局域网应用发现系统架构设计-20260309204204.json  design.md  development.md  execution.md  formatted_architecture.json  overview.md  requirements.md  service_config.sample.json  service_config.schema.json  testing.md
docs/plans/: 2026-03-09-ai-server-discover-python.md  2026-03-09-aiecho-python.md
examples/: service_config_data_analysis.json  service_config_image_recognition.json  service_config_multi.json  service_config_pdf_convert.json  service_config_speech_to_text.json  service_config_text_generator.json  service_config_translation.json
python/: pyproject.toml
python/examples/: manifest_example.json  service_config.json
python/src/ai_discover/: cli.py  config.py  protocol.py
python/src/aiecho/: __init__.py  cli.py  config.py  discoverer.py  listener.py  scanner.py  server.py
rust/: Cargo.toml  README.md
rust/.github/workflows/: release.yml
rust/examples/: service_config.json
rust/src/: config.rs  discoverer.rs  lib.rs  main.rs  protocol.rs  scanner.rs  server.rs
test/service1/: .echo  manifest.json
test/service2/: .echo  manifest.json
utils/: release.ps1
